# App-C-Qrcode

./: README.md
mergeDb/: CMakeLists.txt  config.h  main.c
mergeDb/bld/: CMakeCache.txt  Makefile  cmake_install.cmake
